[gd_scene load_steps=5 format=3 uid="uid://ccnckp72y32oa"]

[ext_resource type="Script" path="res://scripts/menus/leaderboard_menu.gd" id="1_7h14k"]
[ext_resource type="PackedScene" uid="uid://bkwu1bctrw24b" path="res://scenes/ui/menu_wallpaper.tscn" id="2_bodlk"]
[ext_resource type="PackedScene" uid="uid://cld17lnl4pmva" path="res://scenes/utilities/score_manager.tscn" id="3_jfte2"]

[sub_resource type="LabelSettings" id="LabelSettings_h1qeq"]
font_size = 64

[node name="LeaderboardMenu" type="Node2D"]
script = ExtResource("1_7h14k")

[node name="MenuWallpaper" parent="." instance=ExtResource("2_bodlk")]
modulate = Color(0.278431, 0.392157, 0.486275, 1)

[node name="LeaderboardCanvas" type="CanvasLayer" parent="."]

[node name="LeaderboardLabel" type="Label" parent="LeaderboardCanvas"]
offset_left = 388.0
offset_top = 36.0
offset_right = 786.0
offset_bottom = 124.0
text = "Leaderboard"
label_settings = SubResource("LabelSettings_h1qeq")

[node name="BackButton" type="Button" parent="LeaderboardCanvas"]
offset_left = 532.0
offset_top = 536.0
offset_right = 646.0
offset_bottom = 567.0
text = "Back to Menu"

[node name="LeaderboardData" type="Node2D" parent="LeaderboardCanvas"]

[node name="Rank1" type="Node2D" parent="LeaderboardCanvas/LeaderboardData"]
position = Vector2(100, 200)

[node name="IndexLabel" type="Label" parent="LeaderboardCanvas/LeaderboardData/Rank1"]
offset_left = 18.0
offset_top = -13.0
offset_right = 58.0
offset_bottom = 10.0
text = "1."

[node name="NameLabel" type="Label" parent="LeaderboardCanvas/LeaderboardData/Rank1"]
offset_left = 42.0
offset_top = -13.0
offset_right = 145.0
offset_bottom = 10.0
text = "No Data........."

[node name="ScoreLabel" type="Label" parent="LeaderboardCanvas/LeaderboardData/Rank1"]
offset_left = 870.0
offset_top = -13.0
offset_right = 910.0
offset_bottom = 10.0
text = "0"

[node name="Rank2" type="Node2D" parent="LeaderboardCanvas/LeaderboardData"]
position = Vector2(100, 225)

[node name="IndexLabel" type="Label" parent="LeaderboardCanvas/LeaderboardData/Rank2"]
offset_left = 17.0
offset_top = -13.0
offset_right = 57.0
offset_bottom = 10.0
text = "2."

[node name="NameLabel" type="Label" parent="LeaderboardCanvas/LeaderboardData/Rank2"]
offset_left = 42.0
offset_top = -13.0
offset_right = 145.0
offset_bottom = 10.0
text = "No Data........."

[node name="ScoreLabel" type="Label" parent="LeaderboardCanvas/LeaderboardData/Rank2"]
offset_left = 870.0
offset_top = -13.0
offset_right = 910.0
offset_bottom = 10.0
text = "0"

[node name="Rank3" type="Node2D" parent="LeaderboardCanvas/LeaderboardData"]
position = Vector2(100, 250)

[node name="IndexLabel" type="Label" parent="LeaderboardCanvas/LeaderboardData/Rank3"]
offset_left = 18.0
offset_top = -13.0
offset_right = 58.0
offset_bottom = 10.0
text = "3."

[node name="NameLabel" type="Label" parent="LeaderboardCanvas/LeaderboardData/Rank3"]
offset_left = 42.0
offset_top = -13.0
offset_right = 145.0
offset_bottom = 10.0
text = "No Data........."

[node name="ScoreLabel" type="Label" parent="LeaderboardCanvas/LeaderboardData/Rank3"]
offset_left = 870.0
offset_top = -13.0
offset_right = 910.0
offset_bottom = 10.0
text = "0"

[node name="Rank4" type="Node2D" parent="LeaderboardCanvas/LeaderboardData"]
position = Vector2(100, 275)

[node name="IndexLabel" type="Label" parent="LeaderboardCanvas/LeaderboardData/Rank4"]
offset_left = 18.0
offset_top = -13.0
offset_right = 58.0
offset_bottom = 10.0
text = "4."

[node name="NameLabel" type="Label" parent="LeaderboardCanvas/LeaderboardData/Rank4"]
offset_left = 42.0
offset_top = -13.0
offset_right = 145.0
offset_bottom = 10.0
text = "No Data........."

[node name="ScoreLabel" type="Label" parent="LeaderboardCanvas/LeaderboardData/Rank4"]
offset_left = 870.0
offset_top = -13.0
offset_right = 910.0
offset_bottom = 10.0
text = "0"

[node name="Rank5" type="Node2D" parent="LeaderboardCanvas/LeaderboardData"]
position = Vector2(100, 300)

[node name="IndexLabel" type="Label" parent="LeaderboardCanvas/LeaderboardData/Rank5"]
offset_left = 18.0
offset_top = -13.0
offset_right = 58.0
offset_bottom = 10.0
text = "5."

[node name="NameLabel" type="Label" parent="LeaderboardCanvas/LeaderboardData/Rank5"]
offset_left = 42.0
offset_top = -13.0
offset_right = 145.0
offset_bottom = 10.0
text = "No Data........."

[node name="ScoreLabel" type="Label" parent="LeaderboardCanvas/LeaderboardData/Rank5"]
offset_left = 870.0
offset_top = -13.0
offset_right = 910.0
offset_bottom = 10.0
text = "0"

[node name="ScoreManager" parent="." instance=ExtResource("3_jfte2")]

[connection signal="pressed" from="LeaderboardCanvas/BackButton" to="." method="_on_back_button_pressed"]
